# spotti

./: .gitignore  README.md
.github/workflows/: release.yml
SpottiApp/Spotti/Spotti.xcodeproj/: project.pbxproj
SpottiApp/Spotti/Spotti.xcodeproj/xcshareddata/xcschemes/: Spotti.xcscheme
SpottiApp/Spotti/Spotti/App/: Config.swift  SpottiApp.swift
SpottiApp/Spotti/Spotti/Bridge/: Spotti-Bridging-Header.h  SpottiBridge.swift  spotti_core.h
SpottiApp/Spotti/Spotti/Intents/: PlaybackIntents.swift  SpottiShortcuts.swift
SpottiApp/Spotti/Spotti/Models/: AppSettings.swift  DeviceInfo.swift  KeyboardShortcutManager.swift  SpotifyModels.swift
SpottiApp/Spotti/Spotti/Navigation/: Router.swift
SpottiApp/Spotti/Spotti/Services/: NotificationService.swift  SpotlightIndexer.swift
SpottiApp/Spotti/Spotti/Theme/: ColorExtractor.swift  HoverScaleModifier.swift  ThemeEngine.swift
SpottiApp/Spotti/Spotti/Views/: ContentView.swift  MainContentView.swift
SpottiApp/Spotti/Spotti/Views/Album/: AlbumDetailView.swift
SpottiApp/Spotti/Spotti/Views/Artist/: ArtistDetailView.swift
scripts/: build-dmg.sh  build-rust.sh  dmgbuild_settings.py
spotti-core/: Cargo.toml  build.rs  cbindgen.toml
spotti-core/src/: lib.rs  runtime.rs
spotti-core/src/cache/: art.rs
spotti-core/src/ffi/: mod.rs
spotti-core/src/media/: now_playing.rs
spotti-core/src/player/: engine.rs  mod.rs  types.rs
spotti-core/src/spotify/: auth.rs  convert.rs  detail.rs  devices.rs  library.rs  mod.rs  playback_sync.rs  scoring.rs  search.rs  track_actions.rs  types.rs
(+20 files in other folders)
