[package]
name = "spotti-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "spotti_core"
crate-type = ["staticlib"]

[dependencies]
# Spotify (use git dev branch - v0.8.0 release has vergen-lib version conflict)
librespot-core = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-oauth = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-playback = { git = "https://github.com/librespot-org/librespot", branch = "dev", default-features = false, features = ["rodio-backend"] }
librespot-metadata = { git = "https://github.com/librespot-org/librespot", branch = "dev" }

# Web API
rspotify = { version = "0.15", features = ["cli"] }

# Async
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

# FFI / Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth persistence
keyring = "3"
dirs = "6"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cbindgen = "0.27"
